--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <a href="#home" data-scroll>Home</a>
                             </li>
                             <li  class="">
-                                <a href="#start" data-scroll>Need for Innovation</a>
+                                <a href="#start" data-scroll>Facts</a>
                             </li>
                             <li  class="">
                                 <a href="#problem" data-scroll>Problem</a>
@@ -237,14 +237,14 @@
                                     <div class="desc" style="text-align: justify">
                                      The reason behind the <font style="font-size: 120%; color: white; opacity: 0.7">low survival rate</font> of corporations in B2B settings is that corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because these corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
 
-                                     Furthermore, the reason behind the aforementioned <font style="font-size: 120%; color: white; opacity: 0.7">Bullwhip effect</font> is that corporations, as they grow too large, often <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font> because other companies within the B2B supply chain act as 'barriers'. This could be dangerous because the end-customer should be seen as key figure, seeing their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
+                                     Furthermore, the reason behind the aforementioned <font style="font-size: 120%; color: white; opacity: 0.7">Bullwhip effect</font> is that corporations, as they grow too large, often <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font> because other companies within the B2B supply chain act as 'barriers'. This could be dangerous because the end-customer should be seen as key figure, seeing their needs, values and opinions will affect the entire supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
                                 </div>
                                     <a href="#" class="btn btn-small btn-light-solid btn-transparent show-detail" onclick="pictureChange()" style="display: inline">Show Solution</a>
                                    <!--<a href="#" class="show-detail" onclick="pictureChange()">View Details</a>-->
                                     <div class="career-details-info" style="background: #222222">
                                         <div class="c-list-row">
                                             <label><font style="color: white">Solution</font></label>
-                                            <div class="info">As an  <font style="font-size: 135%; color: rgb(242,103,33)">B2B innovation consultant</font> within Deloitte, We are able to look at the problem from an outside and <font style="font-size: 120%; color: white; opacity: 0.7">human-centered perspective</font>. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps:</div>
+                                            <div class="info">I am the leader of our <font style="font-size: 135%; color: rgb(242,103,33)">B2B Innovation Resurrection</font> department, and with our consultancy, we are able to look at the problem from an outside and <font style="font-size: 120%; color: white; opacity: 0.7">human-centered perspective</font>. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps:</div>
                                         </div>
                                         <div class="c-list-row">
                                             <label><font style="color: white">Steps</font></label>
@@ -287,7 +287,7 @@
                             <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
-                                            <p>for something new, stop doing something old</p>
+                                            <p>For something new, stop doing something old</p>
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify">
@@ -399,7 +399,7 @@
                              <div class="col-md-12">
                                 <div class="blog-post">
                                         <blockquote class="quote-post">
-                                            <p>wire solution into brand DNA</p>
+                                            <p>Wire solution into brand DNA</p>
                                         </blockquote>
                                     </div>
                                 <div class="desc" style="text-align: justify">
